# crypto-pipeline

./: .coverage  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
crypto_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: requirements.txt  streamlit_app.py
data/raw/: binance_20260523_223936.json  binance_20260523_224702.json  coinbase_20260523_230838.json
docs/: architecture.md
infra/: backend.tf  build_lambda.sh  lambda.tf  main.tf  outputs.tf  snowflake_iam.tf  snowpipe_notification.tf  variables.tf  versions.tf
infra/.terraform-tmp/lambda_build/charset_normalizer-3.4.7.dist-info/: RECORD
infra/.terraform-tmp/lambda_build/idna-3.16.dist-info/: RECORD
infra/.terraform-tmp/lambda_build/ingestion/: binance.py  lambda_handler.py
ingestion/: binance.py  coinbase.py  s3_writer.py
ingestion/tests/: test_binance.py  test_coinbase.py
snowflake/migrations/: V1.0.0__init_databases.sql  V1.0.1__raw_tables.sql  V1.0.2__storage_integration.sql  V1.0.3__external_stage.sql  V1.0.4__snowpipe.sql  V1.1.0__staging_prices.sql  V1.1.1__stream_market_ticks.sql  V1.1.2__proc_flatten_market_ticks.sql  V1.1.3__task_flatten_market_ticks.sql  V1.2.0__analytics_arbitrage.sql  V1.2.1__proc_detect_arbitrage.sql  V1.2.2__task_detect_arbitrage.sql
snowpark/procs/: flatten_market_ticks.py
